Agrega numero total de post

--- a/src/views/post.html
+++ b/src/views/post.html
@@ -1,3 +1,5 @@
-<h2 class="text-center text-white">Total Post: <span></span></h2>
+<h2 class="text-center text-white my-4">
+	Total Post: <span id="totalPost"></span>
+</h2>
 
 <ul class="list-group" id="posts" style="height: 70vh; overflow: auto"></ul>
